--- a/views/votes/new.erb
+++ b/views/votes/new.erb
@@ -2,31 +2,33 @@
 
 <form action="/votes" method="post">
 
-  <label for="name">Voting Pub Name:</label>
-  <select id='pub_id' name='name' type='text'>
+  <label for="pub_id">Voting Pub Id:</label>
+  <select id='pub_id' name='pub_id' type='text'>
+    <% @votes.each do |vote| %>
+      <% if vote.vote1() == "" %>
+        <option value="<%= vote.pub_id()%>"> <%= vote.pub_id() %> </option>
+      <% end %>
+    <% end %>
+  </select>qQ
+
+  <label for="vote1">First Vote:</label>
+  <select id='pub_id' name='vote1' type='text'>
     <% @pubs.each do |pub| %>
       <option value="<%= pub.name()%>"> <%= pub.name() %> </option>
     <% end %>
   </select>
-
-  <label for="vote1_id">First Vote:</label>
-  <select id='pub_id' name='vote1_id' type='text'>
-    <% @votes.each do |vote| %>
-      <option value="<%= vote.pub_id()%>"> <%= vote.pub_id() %> </option>
+  
+  <label for="vote2">Second Vote:</label>
+  <select id='pub_id' name='vote2' type='text'>
+    <% @pubs.each do |pub| %>
+      <option value="<%= pub.name()%>"> <%= pub.name() %> </option>
     <% end %>
   </select>
   
-  <label for="vote2_id">Second Vote:</label>
-  <select id='pub_id' name='vote2_id' type='text'>
-    <% @votes.each do |vote| %>
-      <option value="<%= vote.pub_id()%>"> <%= vote.pub_id() %> </option>
-    <% end %>
-  </select>
-  
-  <label for="vote3_id">Thirds Vote:</label>
-  <select id='pub_id' name='vote3_id' type='text'>
-    <% @votes.each do |vote| %>
-      <option value="<%= vote.pub_id()%>"> <%= vote.pub_id() %> </option>
+  <label for="vote3">Thirds Vote:</label>
+  <select id='pub_id' name='vote3' type='text'>
+    <% @pubs.each do |pub| %>
+      <option value="<%= pub.name()%>"> <%= pub.name() %> </option>
     <% end %>
   </select>
 
