List of pubs sorting correctly

--- a/views/votes/index.erb
+++ b/views/votes/index.erb
@@ -1,7 +1,7 @@
 <div>
 
 <% @pubs.each do |pub| %>
-<p><%= pub.name %></a> has <% pub.update_score %><%= pub.score %> votes! <br>
+<p><%= pub.name %></a> has <%= pub.score %> votes! <br>
 <hr>
 <% end %>
 
