--- a/views/votes/edit.erb
+++ b/views/votes/edit.erb
@@ -7,13 +7,13 @@
     <label for="name">Voting Pub Name:</label>
     <input type="text" name="name" value="<%= @pub.name %>"><br>
     <label for="vote1">Vote 1:</label>
-    <input type="text" name="vote1_id" value="<%= @pub.name %>"><br>
+    <input type="text" name="vote1_id" value="<%= @vote.vote1_id %>"><br>
     <label for="vote1">Vote 2:</label>
-    <input type="text" name="vote1_2" value="<%= @pub.name %>"><br>
+    <input type="text" name="vote1_2" value="<%= @vote.vote2_id %>"><br>
     <label for="vote1">Vote 3:</label>
-    <input type="text" name="vote_3" value="<%= @pub.name %>"><br>
+    <input type="text" name="vote_3" value="<%= @vote.vote3_id %>"><br>
     </select>
-    <input type='submit' value="Update Pub">
+    <input type='submit' value="Update Vote">
   </form>
 
 </div>
