--- a/public/style.css
+++ b/public/style.css
@@ -2,60 +2,14 @@ body {
   font-family: sans-serif;
 }
 
-.logo {
-  color: blue;
-  line-height: 65px;
-  margin-left: 20px;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.go_left {
-  float: left;
-}
-
-.go_right {
-  float: right;
-}
-
-nav {
+.navigation-bar {
   background-color: beige;
-  height: 65px;
-  position: fixed;
   width: 100%;
-  margin-right: 20px;
-}
-
-nav ul{
-  padding-left: 0px;
-  margin: 0px;
-  list-style-type: none;
-  line-height: 65px;
-}
-
-nav ul li{
   display: inline-block;
-  margin-right: 65px;
 }
 
-nav ul li a{
-  text-decoration: none;
-  color: blue;
-  line-height: 65px;
-  margin-left: 20px;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.box {
-  padding: 20px;
-  margin: 1em;
-  border: 1px solid black;
-}
-
-main {
-  padding-top: 80px;
-  background-color: white;
-  overflow: scroll;
-  min-height: 50em;
+#ul_top li {
+    display: inline;
+    padding: 40px;
+    float: right;
 }
